--- a/Camera/Info.plist
+++ b/Camera/Info.plist
@@ -41,5 +41,13 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>请点击&quot;允许&quot;以允许访问</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>请点击&quot;允许&quot;以允许访问</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>请点击&quot;允许&quot;以允许访问</string>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>请点击&quot;允许&quot;以允许访问</string>
 </dict>
 </plist>
